--- a/packages/reconciler/package.json
+++ b/packages/reconciler/package.json
@@ -1,31 +1,35 @@
 {
     "name": "@wix/react-velo",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "",
     "main": "./dist/render.js",
     "scripts": {
-      "build": "tsc",
-      "esbuild": "esbuild render.tsx --bundle --minify --target=es2020 --platform=browser --external:react --external:React --outfile=my-app.js && sed -i '' 's/nr(\"react\")/React/g' my-app.js",
-      "test": "true"
+        "build": "tsc",
+        "esbuild": "esbuild render.tsx --bundle --minify --target=es2020 --platform=browser --external:react --external:React --outfile=my-app.js && sed -i '' 's/nr(\"react\")/React/g' my-app.js",
+        "test": "true"
     },
     "author": "Yury Michurin <yurym@wix.com>",
     "license": "MIT",
     "dependencies": {
-      "@types/node": "^16.11.10",
-      "esbuild": "^0.14.1",
-      "react": "^17.0.2",
-      "react-reconciler": "^0.26.2",
-      "typescript": "^4.5.2"
+        "react": "^17.0.2",
+        "react-reconciler": "^0.26.2"
     },
     "devDependencies": {
-      "@types/react": "^17.0.37",
-      "@types/react-reconciler": "^0.26.4"
+        "@types/node": "^16.11.10",
+        "esbuild": "^0.14.1",
+        "typescript": "^4.5.2",
+        "@types/react": "^17.0.37",
+        "@types/react-reconciler": "^0.26.4"
     },
     "wix": {
       "artifact": {
         "groupId": "com.wixpress",
         "artifactId": "@wix/react-velo"
       }
+    },
+    "publishConfig": {
+      "registry": "https://registry.npmjs.org/",
+      "logLevel": "verbose",
+      "versionBumpStrategy": "patch"
     }
-  }
-  
+}
