--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,10 @@
+yarnPath: ".yarn/releases/yarn-berry.cjs"
+
+nmMode: hardlinks-local
+
 nodeLinker: node-modules
 
-yarnPath: .yarn/releases/yarn-berry.cjs
+npmRegistryServer: "http://npm.dev.wixpress.com/"
+
+unsafeHttpWhitelist:
+  - npm.dev.wixpress.com
