Make falcon happy

--- a/packages/reconciler/package.json
+++ b/packages/reconciler/package.json
@@ -30,6 +30,7 @@
     "publishConfig": {
         "registry": "https://registry.npmjs.org/",
         "logLevel": "verbose",
-        "versionBumpStrategy": "patch"
+        "versionBumpStrategy": "patch",
+        "access": "public"
     }
 }
