--- a/packages/reconciler/package.json
+++ b/packages/reconciler/package.json
@@ -2,7 +2,7 @@
     "name": "@wix/react-velo",
     "version": "1.0.1",
     "description": "",
-    "main": "./dist/render.js",
+    "main": "./dist/src/render.js",
     "scripts": {
         "build": "tsc",
         "esbuild": "esbuild src/render.tsx --bundle --minify --target=es2020 --platform=browser --global-name=reactVelo --external:react --external:React --outfile=./dist/react-velo-bundle.js && sed -i '' 's/Lu(\"react\")/React/g' ./dist/react-velo-bundle.js",
