--- a/packages/reconciler/tsconfig.json
+++ b/packages/reconciler/tsconfig.json
@@ -6,6 +6,7 @@
         "ES2019",
         "DOM"
       ],
+      "moduleResolution": "node",
       "outDir": "./dist",
       "jsx": "react",
       "strict": true,
