--- a/packages/reconciler-statics/package.json
+++ b/packages/reconciler-statics/package.json
@@ -7,7 +7,7 @@
         "email": "yurym@wix.com"
     },
     "scripts": {
-        "build": "esbuild index.js --bundle --minify --target=es2020 --platform=browser --global-name=reactVelo --external:react --external:React --outfile=./dist/react-velo-bundle.js && node scripts/process-bundle.js",
+        "build": "mkdir -p dist/statics && esbuild index.js --bundle --minify --target=es2020 --platform=browser --global-name=reactVelo --external:react --external:React --outfile=./dist/statics/react-velo-bundle.js && node scripts/process-bundle.js",
         "serve": "http-server dist -p 9080",
         "test": "yarn esbuild && jest"
     },
