--- a/packages/reconciler-statics/package.json
+++ b/packages/reconciler-statics/package.json
@@ -8,14 +8,12 @@
     },
     "scripts": {
         "build": "mkdir -p dist/statics && esbuild index.js --bundle --minify --target=es2020 --platform=browser --global-name=reactVelo --external:react --external:React --outfile=./dist/statics/react-velo-bundle.js && node scripts/process-bundle.js",
-        "serve": "http-server dist -p 9080",
-        "test": "yarn esbuild && jest"
+        "test": "true"
     },
     "license": "MIT",
     "devDependencies": {
         "@wix/react-velo": "^1.0.1",
         "esbuild": "^0.14.1",
-        "http-server": "^14.0.0",
         "typescript": "^4.5.2"
     },
     "description": "react-velo as a bundle",
