Publish the bundle to npm as well

--- a/packages/reconciler/package.json
+++ b/packages/reconciler/package.json
@@ -4,10 +4,10 @@
     "description": "",
     "main": "./dist/src/render.js",
     "scripts": {
-        "build": "tsc",
-        "esbuild": "esbuild src/render.tsx --bundle --minify --target=es2020 --platform=browser --global-name=reactVelo --external:react --external:React --outfile=./dist/react-velo-bundle.js && node scripts/process-bundle.js",
+        "build": "tsc && yarn build-bundle",
+        "build-bundle": "esbuild src/render.tsx --bundle --minify --target=es2020 --platform=browser --global-name=reactVelo --external:react --external:React --outfile=./dist/react-velo-bundle.js && node scripts/process-bundle.js",
         "serve": "http-server dist -p 9080",
-        "test": "yarn esbuild && jest"
+        "test": "jest"
     },
     "author": "Yury Michurin <yurym@wix.com>",
     "license": "MIT",
