--- a/packages/reconciler/package.json
+++ b/packages/reconciler/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "tsc && yarn build-bundle",
         "build-bundle": "esbuild src/render.tsx --bundle --minify --target=es2020 --platform=browser --global-name=reactVelo --external:react --external:React --outfile=./dist/react-velo-bundle.js && node scripts/process-bundle.js",
-        "serve": "http-server dist -p 9080",
+        "serve": "http-server dist -p 9080 -c-1",
         "test": "jest"
     },
     "author": "Yury Michurin <yurym@wix.com>",
