--- a/packages/reconciler/package.json
+++ b/packages/reconciler/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.1",
     "description": "",
     "main": "./dist/src/render.js",
+    "types": "types/index.d.ts",
     "scripts": {
         "build": "tsc && yarn build-bundle",
         "build-bundle": "esbuild src/render.tsx --bundle --minify --target=es2020 --platform=browser --global-name=reactVelo --external:react --external:React --outfile=./dist/react-velo-bundle.js && node scripts/process-bundle.js",
