--- a/packages/reconciler/package.json
+++ b/packages/reconciler/package.json
@@ -8,6 +8,7 @@
         "build": "tsc && yarn build-bundle",
         "build-bundle": "esbuild src/render.tsx --bundle --minify --target=es2020 --platform=browser --global-name=reactVelo --external:react --external:React --outfile=./dist/react-velo-bundle.js && node scripts/process-bundle.js",
         "serve": "http-server dist -p 9080 -c-1",
+        "serve:types": "http-server types -p 9081 -c-1",
         "test": "jest"
     },
     "author": "Yury Michurin <yurym@wix.com>",
