--- a/packages/reconciler/package.json
+++ b/packages/reconciler/package.json
@@ -11,7 +11,7 @@
         "build-bundle:esm": "esbuild src/render.tsx --bundle --format=esm --minify --target=es2020 --platform=browser --external:react --outfile=./dist/react-velo.esm.js && node scripts/process-bundle.js react-velo.esm.js",
         "build-bundle:cjs": "esbuild src/render.tsx --bundle --format=cjs --minify --target=es2020 --platform=browser --external:react --outfile=./dist/react-velo.cjs.js && node scripts/process-bundle.js react-velo.cjs.js",
         "serve": "http-server dist -p 9080 -c-1",
-        "serve:types": "http-server types -p 9081 -c-1",
+        "serve:types": "http-server types -p 9081 -c-1 --cors",
         "test": "jest"
     },
     "author": "Yury Michurin <yurym@wix.com>",
